# fotoniQ

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/fotoniq/: dummy.py  exp_monit.py  logger.py
src/fotoniq/gui/base/: app.py
src/fotoniq/gui/example/: example.py  model.py
src/fotoniq/gui/plot_base/: app_base.py  default_figure.py
tests/: test_expmonit.py
