[project]
name = "fotoniq"
version = "0.1.0"
description = "This package hosts the codes and tools of the amazing quantum laboratory (U. de Chile).."
authors = [
    {name = "Amazing Quantum Team"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "influxdb (>=5.3.2,<6.0.0)",
    "paramiko (>=4.0.0,<5.0.0)",
    "colorlog (>=6.10.1,<7.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)"
]


[tool.poetry]
packages = [{include = "fotoniq", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "mkdocstrings[python] (>=1.0.3,<2.0.0)"
]
